# rvg

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RVG.md  example.svg.rvg  install.sh  rvg.capnp  rvg.fbs  rvg_capnp.rs  rvg_generated.rs
examples/: main.rs  rvg2png.rs  svg2rvg.rs
old/: Cargo.toml
old/src/: lib.rs
rvg/: Cargo.toml  install.sh
rvg/examples/: rvg2png.rs  rvgfrom.rs
rvg/src/: graphic.rs  lib.rs  rvg.rs  rvg_capnp.rs
rvgedit/: Cargo.toml
rvgfrom/: Cargo.toml
rvgfrom/src/: main.rs
rvgshow/: Cargo.toml
src/: footile.rs  lib.rs  render.rs  rvg.rs
