[package]
name = "rvg"
version = "0.0.3"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

license = "MIT / BSL-1.0"
description = "Vector graphics format."
documentation = "https://docs.rs/rvg"
homepage = "https://aldarobot.plopgrizzly.com/rvg/"
repository = "https://github.com/Aldarobot/rvg"
readme = "README.md"

[dependencies]
miniz_oxide = "0.3"
footile = { optional = true, version = "0.4" }
pix = { optional = true, version = "0.12" }

[dev-dependencies]
png_pong = "0.4"
usvg = "0.9"
footile = "0.4"

[features]
default = []
render = ["footile", "pix"]
