[package]
name = "rvg"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

license = "MIT / BSL-1.0"
description = "Vector graphics file format."
documentation = "https://docs.rs/rvg"
repository = "https://github.com/libcala/rvg"
readme = "README.md"

[dependencies]
ruzstd = "0.2" # For Decoding ZStd Compression
zstd = { optional = true, version = "0.5" } # For Encoding ZStd Compression
footile = { optional = true, version = "0.6" }
pix = "0.13"

[dev-dependencies]
png_pong = "0.5"
usvg = "0.9"
roxmltree = "0.11"
svgtypes = "0.5"

[features]
default = ["zstd"]
render = ["footile"]
